--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,8 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/.vs/Firefox-Extensions/config/applicationhost.config
-/.vs/Firefox-Extensions/CopilotIndices/17.13.439.2385
+/.vs/Firefox-Extensions/config
 /.vs/Firefox-Extensions/FileContentIndex
 /.vs/Firefox-Extensions/v17
 /.vs/slnx.sqlite
-/.vs/slnx.sqlite-journal
 /.vs/VSWorkspaceState.json
